# Drone

./: .gitmodules  CMakeLists.txt  datasheets.md  hardware_pwm.cpp  i2c_gyroscope.cpp  learning_material.md  main.cpp  readme.md  wiring.md
sensor_reader/: CMakeLists.txt  sensor_reader.cpp  sensor_reader.h
